[package]
name = "i18n-cosine-similarity"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# JAVASCRIPT STUFF
js-sys = "0.3.72"
regex = "1.5.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.5", features = ["Window", "Document"] }
